--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Run Maven Tests
 on:
   push:
     branches:
-      - main
+      - main # Change this to the appropriate branch name
 
 jobs:
   build:
@@ -16,7 +16,8 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: 17
-
+          java-version: '17'
+          distribution: 'adopt'
+          
       - name: Build and Test with Maven
         run: mvn clean test
