Run Maven build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Run Maven Tests
 on:
   push:
     branches:
-      - main # Change this to the appropriate branch name
+      - main
 
 jobs:
   build:
